wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  type: ClusterIP   # Change to LoadBalancer if using cloud provider
  ports:
    - protocol: TCP
      port: 4499       # Cluster-internal port
      targetPort: 4499 # Container port
      #nodePort: 31499  # Host port accessible outside the cluster
